enhanced API
 * added catalog access
 * create new system
 * added Swagger documentation
